refactor(tests): clean up commented code and improve assertions in test classes